# api/router.go
@@ -184,7 +184,10 @@ func RegisterRouterWithJWT(router *gin.Engine, cfg config.Config) {
 	storage.GET("/get_asset_status", GetAssetStatusHandler)
 	storage.GET("/get_fil_storage_list", GetFilStorageListHandler)
 	storage.GET("/get_area_id", GetSchedulerAreaIDs)
-	storage.POST("/upload_temp_file", UploadTmepFile)
+	storage.POST("/temp_file/upload", UploadTmepFile)
+	storage.GET("/temp_file/info/:cid", GetUploadInfo)
+	storage.GET("/temp_file/share/:cid", ShareTempFile)
+	storage.GET("/temp_file/download/:cid", DownloadTempFile)
 	// storage.Use(authMiddleware.MiddlewareFunc())
 	storage.Use(AuthRequired(authMiddleware))
 	storage.GET("/share_asset", ShareAssetsHandler)
