# api/temp_storage.go
@@ -1,19 +1,29 @@
 package api
 
 import (
+	"database/sql"
+	"fmt"
 	"net/http"
 
 	"github.com/Filecoin-Titan/titan/api"
 	"github.com/Filecoin-Titan/titan/api/types"
 	"github.com/gin-gonic/gin"
+	"github.com/gnasnik/titan-explorer/core/dao"
 	"github.com/gnasnik/titan-explorer/core/errors"
+	"github.com/gnasnik/titan-explorer/core/oprds"
+	"github.com/gnasnik/titan-explorer/core/storage"
+)
+
+const (
+	maxTempAssetDownloadCount int64 = 20
+	maxTempAssetShareCount    int64 = 60
 )
 
 type (
 	// UploadTempFileReq 上传临时文件
 	UploadTempFileReq struct {
 		AssetName string   `json:"asset_name" binding:"required"`
-		AssetCID  string   `json:"asset_cid" binding:"required"`
+		AssetCID  string   `json:"asset_cid" binding:"required"` // 最多3个
 		NodeID    string   `json:"node_id"`
 		AssetSize int64    `json:"asset_size" binding:"required"`
 		AreaIDs   []string `json:"area_ids" binding:"required"`
@@ -21,8 +31,17 @@ type (
 )
 
 // UploadTmepFile 未登陆用户受限制上传文件
+// @Summary 首页上传文件
+// @Description 首页上传文件，如果返回的为空数组，则不调用上传接口
+// @Tags temp_file
+// @Param req body UploadTempFileReq true "文件上传参数"
+// @Success 200 {object} JsonObject "{[]{CandidateAddr: “”, Token: “”}}"
+// @Router /api/v1/storage/temp_file/upload [post]
 func UploadTmepFile(c *gin.Context) {
-	var req UploadTempFileReq
+	var (
+		req UploadTempFileReq
+		rsp = make([]JsonObject, 0)
+	)
 
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
@@ -34,18 +53,49 @@ func UploadTmepFile(c *gin.Context) {
 		return
 	}
 
+	// 获取文件hash
+	hash, err := storage.CIDToHash(req.AssetCID)
+	if err != nil {
+		log.Errorf("UploadTmepFile CIDToHash error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	// 判断文件是否已经存在
+	aids, err := oprds.GetClient().GetUnloginAssetAreaIDs(c.Request.Context(), hash)
+	if err == nil && len(aids) != 0 {
+		c.JSON(http.StatusOK, respJSON(rsp))
+		return
+	}
+
+	// 判断文件是否已经被上传分享60次了
+	taInfo, err := dao.GetTempAssetInfo(c.Request.Context(), hash)
+	if err != nil && err != sql.ErrNoRows {
+		log.Errorf("GetTempAssetInfo error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	if taInfo.ShareCount >= maxTempAssetShareCount {
+		c.JSON(http.StatusOK, respErrorCode(errors.TempAssetUploadErr, c))
+		return
+	}
+
 	schCli, err := getSchedulerClient(c.Request.Context(), req.AreaIDs[0])
 	if err != nil {
 		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
 		return
 	}
-	createAssetRsp, err := schCli.CreateAsset(c.Request.Context(), &types.CreateAssetReq{
+	careq := &types.CreateAssetReq{
 		AssetCID:      req.AssetCID,
 		AssetSize:     req.AssetSize,
 		NodeID:        req.NodeID,
-		ReplicaCount:  20,
 		ExpirationDay: 1,
-	})
+	}
+	if len(req.AreaIDs) == 1 {
+		careq.ReplicaCount = 20
+	} else {
+		careq.ReplicaCount = 10
+	}
+	createAssetRsp, err := schCli.CreateAsset(c.Request.Context(), careq)
 	if err != nil {
 		log.Errorf("CreateAssetHandler CreateAsset error: %v", err)
 		if webErr, ok := err.(*api.ErrWeb); ok {
@@ -55,11 +105,199 @@ func UploadTmepFile(c *gin.Context) {
 		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
 		return
 	}
+	// 塞到redis中去
+	if len(req.AreaIDs) > 1 {
+		oprds.GetClient().PushAreaIDs(c.Request.Context(), &oprds.AreaIDPayload{CID: req.AssetCID, Hash: hash, AreaIDs: req.AreaIDs})
+	}
 
-	rsp := make([]JsonObject, len(createAssetRsp.List))
-	for i, v := range createAssetRsp.List {
-		rsp[i] = JsonObject{"CandidateAddr": v.UploadURL, "Token": v.Token}
+	if !createAssetRsp.AlreadyExists {
+		for _, v := range createAssetRsp.List {
+			rsp = append(rsp, JsonObject{"CandidateAddr": v.UploadURL, "Token": v.Token})
+		}
 	}
 
 	c.JSON(http.StatusOK, respJSON(rsp))
+}
+
+// ShareTempFile 分享
+func ShareTempFile(c *gin.Context) {
+	cid := c.Param("cid")
+
+	// 获取文件hash
+	hash, err := storage.CIDToHash(cid)
+	if err != nil {
+		log.Errorf("ShareTempFile CIDToHash error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	// 判断文件是否已经被上传分享60次了
+	taInfo, err := dao.GetTempAssetInfo(c.Request.Context(), hash)
+	if err != nil && err != sql.ErrNoRows {
+		log.Errorf("ShareTempFile error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	if taInfo.ShareCount >= maxTempAssetShareCount {
+		c.JSON(http.StatusOK, respErrorCode(errors.TempAssetUploadErr, c))
+		return
+	}
+	// 获取文件所有区域
+	aids, err := oprds.GetClient().GetUnloginAssetAreaIDs(c.Request.Context(), hash)
+	if err == nil || len(aids) == 0 {
+		c.JSON(http.StatusOK, respErrorCode(errors.NotFound, c))
+		return
+	}
+	// 获取用户的访问的ip
+	ip, err := GetIPFromRequest(c.Request)
+	if err != nil {
+		log.Errorf("get user's ip of request error:%w", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	areaID, err := GetNearestAreaID(c.Request.Context(), ip, aids)
+	if err != nil {
+		log.Error(err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	schedulerClient, err := getSchedulerClient(c.Request.Context(), areaID)
+	if err != nil {
+		c.JSON(http.StatusOK, respErrorCode(errors.NoSchedulerFound, c))
+		return
+	}
+	urls, err := schedulerClient.ShareAssets(c.Request.Context(), "", []string{cid})
+	if err != nil {
+		if webErr, ok := err.(*api.ErrWeb); ok {
+			c.JSON(http.StatusOK, respErrorCode(webErr.Code, c))
+			return
+		}
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	if len(urls) == 0 {
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	dao.AddTempAssetShareCount(c.Request.Context(), hash)
+	c.Redirect(301, urls[cid][0])
+}
+
+// DownloadTempFile 下载
+// @Summary 下载首页上传文件
+// @Description 下载首页上传文件
+// @Tags temp_file
+// @Param cid path string true "文件的cid"
+// @Success 200 {object} JsonObject ""
+// @Router /temp_file/download/{cid} [get]
+func DownloadTempFile(c *gin.Context) {
+	cid := c.Param("cid")
+
+	// 获取文件hash
+	hash, err := storage.CIDToHash(cid)
+	if err != nil {
+		log.Errorf("ShareTempFile CIDToHash error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	// 判断文件是否已经被下载20次了
+	taInfo, err := dao.GetTempAssetInfo(c.Request.Context(), hash)
+	if err != nil && err != sql.ErrNoRows {
+		log.Errorf("ShareTempFile error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	if taInfo.DownloadCount >= maxTempAssetDownloadCount {
+		c.JSON(http.StatusOK, respErrorCode(errors.TempAssetDownErr, c))
+		return
+	}
+	// 获取文件所有区域
+	aids, err := oprds.GetClient().GetUnloginAssetAreaIDs(c.Request.Context(), hash)
+	if err == nil || len(aids) == 0 {
+		c.JSON(http.StatusOK, respErrorCode(errors.NotFound, c))
+		return
+	}
+	// 获取用户的访问的ip
+	ip, err := GetIPFromRequest(c.Request)
+	if err != nil {
+		log.Errorf("get user's ip of request error:%w", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	areaID, err := GetNearestAreaID(c.Request.Context(), ip, aids)
+	if err != nil {
+		log.Error(err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	schedulerClient, err := getSchedulerClient(c.Request.Context(), areaID)
+	if err != nil {
+		c.JSON(http.StatusOK, respErrorCode(errors.NoSchedulerFound, c))
+		return
+	}
+	urls, err := schedulerClient.ShareAssets(c.Request.Context(), "", []string{cid})
+	if err != nil {
+		if webErr, ok := err.(*api.ErrWeb); ok {
+			c.JSON(http.StatusOK, respErrorCode(webErr.Code, c))
+			return
+		}
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	if len(urls) == 0 {
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	dao.AddTempAssetShareCount(c.Request.Context(), hash)
+	c.JSON(http.StatusOK, respJSON(JsonObject{
+		"asset_cid": cid,
+		"url":       urls[cid],
+	}))
+}
+
+// GetUploadInfo 获取上传详情
+// @Summary 获取上传详情
+// @Description 获取上传详情
+// @Tags temp_file
+// @Param cid path string true "文件的cid"
+// @Success 200 {object} JsonObject "{total:0,cid:"",share_url:[]{}}"
+// @Router /temp_file/info/{cid} [get]
+func GetUploadInfo(c *gin.Context) {
+	cid := c.Param("cid")
+
+	// 获取文件hash
+	hash, err := storage.CIDToHash(cid)
+	if err != nil {
+		log.Errorf("ShareTempFile CIDToHash error: %v", err)
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+	// 获取调度器区域
+	aids, err := oprds.GetClient().GetUnloginAssetAreaIDs(c.Request.Context(), hash)
+	if err == nil && len(aids) != 0 {
+		c.JSON(http.StatusOK, respErrorCode(errors.InternalServer, c))
+		return
+	}
+
+	resp := new(types.ListReplicaRsp)
+	resp.ReplicaInfos = make([]*types.ReplicaInfo, 0)
+	for _, v := range aids {
+		schedulerClient, err := getSchedulerClient(c.Request.Context(), v)
+		if err != nil {
+			log.Errorf("getSchedulerClient error: %v", err)
+			continue
+		}
+		rsp, err := schedulerClient.GetReplicas(c.Request.Context(), cid, 20, 0)
+		if err != nil {
+			log.Errorf("GetReplicas error: %v", err)
+			continue
+		}
+		resp.Total += rsp.Total
+		resp.ReplicaInfos = append(resp.ReplicaInfos, rsp.ReplicaInfos...)
+	}
+
+	c.JSON(http.StatusOK, respJSON(JsonObject{
+		"total":     resp.Total,
+		"share_url": fmt.Sprintf("https://storage-test.titannet.io/api/v1/storage/temp_file/share/%s", cid),
+		"list":      resp.ReplicaInfos,
+	}))
 }
